--- a/ObjectOrientedProgramming.ipynb
+++ b/ObjectOrientedProgramming.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ObjectOrientedProgramming.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMc5pHpCIZ/WnWXEXIVTf62",
+      "authorship_tag": "ABX9TyNvDWgkLKnMhL5GIhya87p8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,8 +42,23 @@
         "colab": {}
       },
       "source": [
-        "# Monotonic Array\n",
+        "# Q1: Best Time to But and Sell Stocks (https://leetcode.com/problems/best-time-to-buy-and-sell-stock/)\n",
+        "class Solution(object):\n",
+        "    def maxProfit(self, prices):\n",
+        "        # have to test if the list is empty, this was an edge case in submission\n",
+        "        if len(prices) != 0:\n",
+        "            minprice = max(prices)\n",
+        "        else:\n",
+        "            minprice = 0\n",
+        "        maxprofit = 0\n",
+        "        for i in range(len(prices)):\n",
+        "            if prices[i] < minprice:\n",
+        "                    minprice = prices[i]\n",
+        "            elif (prices[i] - minprice) > maxprofit:\n",
+        "                    maxprofit = prices[i] - minprice\n",
+        "        return maxprofit\n",
         "\n",
+        "# Q2: Monotonic Array (https://leetcode.com/problems/monotonic-array/)\n",
         "def isMonotonic(self, A):\n",
         "  increasing = decreasing = True\n",
         "  for i in xrange(len(A) - 1):\n",
@@ -53,7 +68,8 @@
         "      decreasing = False\n",
         "    return increasing or decreasing\n",
         "\n",
-        "\n",
+        "# Q3: Contains Duplicate (https://leetcode.com/problems/contains-duplicate/)\n",
+        "# note that this will NOT work if seen is a list, time out error, have to use a dictionary\n",
         "def containsduplicate(x):\n",
         "  seen ={}\n",
         "  for i in range(len(x)):\n",
@@ -63,6 +79,7 @@
         "      seen[x[i]] = 1\n",
         "  return False\n",
         "\n",
+        "##### SCRATCH FOR TWO SUMS ####\n",
         "def twoSums(x, target):\n",
         "  in_dict = {}\n",
         "  count = 0\n",
@@ -85,15 +102,15 @@
         "  x = [3,3]\n",
         "  print(twoSums(x,6))\n",
         "\n",
-        "class Solution(object):\n",
-        "    def twoSum(self, nums, target):\n",
-        "        for i in range(len(nums)):\n",
-        "            for j in range(i+1, len(nums)):\n",
-        "                if nums[i] + nums[j]  == target:\n",
-        "                    return (i, j)\n",
+        "# TwoSum (https://leetcode.com/problems/two-sum/)\n",
+        "# both of these solutions work\n",
+        "def twoSum(self, nums, target):\n",
+        "  for i in range(len(nums)):\n",
+        "    for j in range(i+1, len(nums)):\n",
+        "      if nums[i] + nums[j]  == target:\n",
+        "        return (i, j)\n",
         "\n",
-        "    \n",
-        "\n",
+        "# 1000X faster!\n",
         "def twoSum(self, nums, target):\n",
         "        seen = {}\n",
         "        for i, v in enumerate(nums):\n",
